Fix CCJK text wrapping in 'Filters' button in domains search and cart popover (#44425)
* Force the 'Filters' text in domains search to be on a single line

* Update cart popover to not break CCJK text into multiple lines

The CSS for amount was set to 100% which was causing the 'Total'
text to be split into multiple lines for CCJK characters. This change
makes the text to break only on word boundary, while preserving
the total amount on one line.

--- a/client/components/domains/search-filters/style.scss
+++ b/client/components/domains/search-filters/style.scss
@@ -43,6 +43,7 @@
 
 		.search-filters__dropdown-filters-button-text {
 			line-height: 1.2;
+			white-space: nowrap;
 
 			@include breakpoint-deprecated( '<660px' ) {
 				display: none;
